--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,10 @@ img {
     padding-right: 50px;
     border-right: 1px #8e8e8e solid;
 }
-
+.jack:hover{
+    transition: 0.3s ease-in-out;
+transform: scale(0.8);
+}
 .ppp {
     display: flex;
     align-items: center;
@@ -343,7 +346,7 @@ margin-bottom: 150px;
     width: 95%;
     margin: auto;
 }
-.fa-solid{
+.fa-star{
     font-size: 15px;
     display: flex;
 }
